--- a/client/src/components/Form/MainForm/Main.css
+++ b/client/src/components/Form/MainForm/Main.css
@@ -1,3 +1,10 @@
-.app_wrapper {
-    background-color: red;
+.form_container {
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
 }
