--- a/client/src/components/Form/MainForm/Main.css
+++ b/client/src/components/Form/MainForm/Main.css
@@ -1,10 +1,117 @@
 .form_container {
+    font-family: sans-serif;
     display: flex;
-    width: 80%;
-    margin: 0 auto;
+    flex-direction: column;
+    width: 60%;
+    margin: 2rem auto;
+    background: #fff;
+    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
+    border-radius: 0.375rem;
 }
 
+
+
 .form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form_group {
+    display: flex;
+    margin: 3rem auto;
+    justify-content: space-around;
+    width: 80%;
+}
+
+.form_group label {
+    font-size: 1.2rem;
+    font-weight: 200;
+    width: 40%;
+}
+
+.checkbox {
+    width: 40%;
+}
+
+input[type="text"], select {
+    height: 44px;
+    box-sizing: border-box;
+    width: 40%;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 1px solid #dbe2e8;
+    font-size: 14px;
+    box-shadow: 0 2px 2px 0 rgba(46, 60, 73, 0.05);
+    border-radius: 2px;
+    color: #2e3d49;
+}
+
+.inactive {
+    background: #fff;
+    pointer-events: none;
+    opacity: 0.1;
+}
+
+.SingleDatePickerInput {
+    border: none;
+}
+
+.SingleDatePicker {
+    width: 40%;
+}
+
+.DateInput__display-text--focused {
+    background: #02b3e4;
+    border-color: #02b3e4;
+    border-radius: 0;
+    color: #fff;
+}
+
+.DateInput {
+    border: 1px solid #dbe2e8;
+    box-shadow: 0 2px 2px 0 rgba(46, 60, 73, 0.05);
+    border-radius: 2px;
+}
+
+.CalendarDay--selected {
+    background: #02b3e4;
+    border: 1px double #02b3e4;
+    color: #fff;
+}
+
+.DayPickerKeyboardShortcuts__show--bottom-right {
+    border-right: 33px solid #02b3e4;
+}
+
+.btn {
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    box-shadow: 12px 15px 20px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.3rem;
+    font-weight: 600;
+    -webkit-font-smoothing: antialiased;
+    max-width: 100%;
+    text-align: center;
+    transition: 0.2s box-shadow ease-in-out, 0.2s background-color ease-in-out, 0.2s border-color ease-in-out;
+    white-space: nowrap;
+    width: 80%;
+    padding: 10px 40px;
+    margin: 2rem auto;
+}
+
+.btn:hover {
+    background: #148bb1;
+    box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.1);
+}
+
+.submit {
+    background: #02b3e4;
+}
+
+form {
     display: flex;
     flex-direction: column;
 }
